<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BlockChildrenActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        
        
        
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChildrensList" />

        <RadioGroup
            android:id="@+id/radioGroup_childrens"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fonctions" />

        <CheckBox
            android:id="@+id/checkBox_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms" />

        <CheckBox
            android:id="@+id/checkBox_call"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call" />

        <CheckBox
            android:id="@+id/checkBox_internet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from" />

            <Button
                android:id="@+id/button_start_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startTime" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to" />

            <Button
                android:id="@+id/button_end_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="endTime" />

        </LinearLayout>

        <Button
            android:id="@+id/block_fonc_child_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Block" />

    </LinearLayout>

</RelativeLayout>